src/objects/ServiceCloudSLAPriorityMapping__mdt.object
<CustomObject>
    <description>To tag cases with the relevant priority based on Case Type, Category, Product Group and Country</description>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Category__c</fullName>
        <label>Case Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service Cloud: SLA Priority Mapping</label>
    <pluralLabel>Service Cloud: SLA Priorities Mapping</pluralLabel>
</CustomObject>